[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reyplot"
version = "0.0.1"
license = {text = "BSD-3-Clause"}
description = "A lightweight Python plotting library for simple visualizations."
authors = [
  { name="Muhammad Essa", email="essabahootraza@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "pycairo",
  "polars",
  "pillow",
  "numpy"
]

[project.urls]
"Homepage" = "https://github.com/MuhammadEssa2002/reyplot"